# tether-timeline

./: .gitignore  README.md  electron-builder.json5  index.html  package.json  tether.yml  vite.config.ts
app/: .gitignore  Cargo.toml  dev.sh  state.json
app/public/: index.html
app/public/assets/: index-075de46f.css  index-0ca20f3d.js  index-17cb74db.css  index-1eda959c.css  index-3889e6e7.js  index-62b235b4.css  index-6c9d9197.js  index-a78bf74b.css  index-a9894740.css  index-abc32645.js  index-b28c6449.js  index-cfed3721.js  index-dd9984a7.js  index-f080dd8e.css  index-fa8afdc8.js
app/src/: bezier.rs  color_gradient.rs  main.rs  model.rs  server.rs  signal_handler.rs  tether.rs  timeline.rs
electron/main/: index.ts  types.ts
electron/preload/: index.ts
public/: 181022_G_LightSetupMugler.gltf
src/: App.tsx  types.ts
src/assets/styles/: app.module.scss
src/assets/styles/components/timeline/: timeline.module.scss
src/components/timeline/: index.tsx
src/components/timeline/track/editors/: curve.tsx  video.tsx
src/redux/timeline/: slice.ts  types.ts
ui/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  types.ts
ui/src/assets/styles/: global.module.scss  index.css
ui/src/components/timeline/: index.tsx  timeline.tsx
ui/src/components/timeline/timetrack/: index.tsx  timetrack.tsx
ui/src/components/timeline/track/: index.tsx  track.tsx
ui/src/context/: keyboard-context.ts
ui/src/redux/: store.ts
ui/src/redux/timeline/: slice.ts  types.ts
ui/src/utils/: bezier-helper.ts  logger.ts
(+15 files in other folders)
