[package]
name = "tether-timeline"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
iron = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.20"
mount = "0.4.0"
pretty_env_logger = "0.5.0"
rmp-serde = "1.1.2"
rs-uuid = "0.4.0"
serde = { version = "1.0.188", features = ["rc"] }
serde_json = { version = "1.0.106", features = ["preserve_order"] }
signal-hook = "0.3.17"
staticfile = "0.5.0"
tether-agent = "0.8.4"
